added page of contact

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Elvish</h1>
         </div>
         <div class="nav-bar-tabs">
-            <a class="active" href="#">contact</a>
+            <a class="active" href="./private/contact.html">contact</a>
             <a href="#">Work</a>
             <a href="#">Education</a>
             <a href="#">About</a>
@@ -43,12 +43,12 @@
             </tr>
             <tr>
                 <td> <a href="https://www.facebook.com/"><img src="./image/facebook.svg"></td>
-                <td><a href="https://www.facebook.com/"><img src="./image/facebook.svg"></td>
+                <td><a href="https://www.instagram.com/"><img src="./image/instagram.svg"></td>
             </tr>
         </table>
     </div>
     <div class="footer-coppy">
-        &copy;  Nadine
+       <a href="private/contact.html" style="color: white; text-decoration: none;"> &copy;  Nadine</a>
 
     </div>
 
